# opal

./: .env.example  .gitignore  AZURE-DEPLOYMENT-COMPLETE.md  AZURE-DEPLOYMENT-GUIDE.md  AZURE-QUICK-START.md  AZURE-SETUP.md  BACKEND-DEPLOYMENT.md  BUILD-VERIFICATION.md  CHANGELOG-v0.2.1.md  CLAUDE.md  CODE-REVIEW-FIXES.md  DEPLOY-NOW.md  DEPLOYMENT-CHECKLIST-v0.2.1.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-FIXES.md  DEPLOYMENT-REPORT.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  EDGE-FUNCTIONS-READY.md  FRONTEND-DEPLOYMENT-FIX.md  FRONTEND-GUIDE.md  OPAL_CODE_REVIEW.md  PATCH-SUMMARY-v0.2.1.md  QUICK-DEPLOY.md  QUICKEST-DEPLOY.md  README-QUICKSTART.md  README.md  SUPABASE-MIGRATION-SUMMARY.md  TESTING-GUIDE.md  UPLOAD-FIX.md  autoscaling-config.md  database-backup-restore.md  deploy-azure.sh  deploy-frontend.ps1  docker-compose.yml  netlify.toml  package-lock.json  package.json  production-checklist.md  readme.md  (+5 more)
src/billing_service/: Dockerfile  pyproject.toml  requirements.txt
src/billing_service/billing_service/: __init__.py  main.py  routes_mollie.py
src/export_worker/: Dockerfile  pyproject.toml  requirements.txt
src/export_worker/export_worker/: __init__.py  worker.py
src/orchestrator/: Dockerfile  pyproject.toml  requirements.txt
src/orchestrator/orchestrator/: __init__.py  worker.py
src/shared/: pyproject.toml
src/shared/shared/: __init__.py  background_removal.py  config.py  db.py  db_sqlalchemy.py  db_supabase.py  encryption.py  etsy_client.py  export_presets.py  image_generation.py  image_resize.py  image_scoring.py  invoice_pdf.py  models.py  mollie_client.py  pipeline.py  queue_database.py  queue_supabase.py  queue_unified.py  scene_types.py  seo_metadata.py  servicebus.py  settings_service.py  shopify_client.py  storage.py  storage_supabase.py  storage_unified.py  style_extraction.py  upscaling.py  util.py  vat.py  watermark.py  woocommerce_client.py
src/web_api/: Dockerfile  pyproject.toml  requirements.txt
src/web_api/web_api/: __init__.py  auth.py  main.py  rate_limit.py  routes_ab_tests.py  routes_account.py  routes_admin.py  routes_api_keys.py  routes_benchmarks.py  routes_billing.py  routes_brand_profiles.py  routes_catalog.py  routes_downloads.py  (+8 more)
(+245 files in other folders)
