[project]
name = "opal-billing-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "opal-shared @ file:///app/shared"
]

[tool.setuptools.packages.find]
where = ["."]
