[project]
name = "opal-export-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "azure-identity>=1.17",
  "azure-servicebus>=7.12",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "opal-shared @ file:///app/shared"
]

[tool.setuptools.packages.find]
where = ["."]
