[project]
name = "opal-shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "azure-identity>=1.17",
  "azure-storage-blob>=12.20",
  "azure-servicebus>=7.12",
  "httpx>=0.27",
  "tenacity>=8.3",
  "structlog>=24.1"
]

[tool.setuptools.packages.find]
where = ["."]
